--- a/user/themes/learn2/templates/partials/logo.html.twig
+++ b/user/themes/learn2/templates/partials/logo.html.twig
@@ -1,2 +1,2 @@
 <img src="/user/assets/logo.png" />
-<a src="http://logsitek.io">Back to Logistek.io</a>
+<a href="http://logsitek.io">Back to Logistek.io</a>
